@startuml
title Access Control System (ACS) – Class Diagram (sin relaciones punteadas)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "baseNoStates" {
  class Actions <<utility>> {
    {static} +LOCK : String
    {static} +UNLOCK : String
    {static} +UNLOCK_SHORTLY : String
    {static} +OPEN : String
    {static} +CLOSE : String
  }

  class Door {
    - id : String
    - from : String
    - to : String
    - closed : boolean
    - state : DoorState
    + Door(id, from, to)
    + doAction(action:String)
    + open()
    + close()
    + isClosed() : boolean
    + getId() : String
    + getStateName() : String
    + setState(state:DoorState)
    + toJson() : JSONObject
  }

  abstract class DoorState {
    # stateName : String
    # door : Door
    + DoorState(stateName:String, door:Door)
    + getState() : String
    + doAction(action:String)
    # open()
    # close()
    # changeState(next:DoorState, reason:String)
  }

  class LockedState{
    # open()
  }
  class UnlockedState{
  # changeState(next:DoorState, reason:String)
  }
  class ProppedState{
  # close()
  }
  class UnlockedShortlyState <<Observer>> {
    - secondsElapsed : int
    + update(tick:LocalDateTime)
  }

  DoorState <|.. LockedState
  DoorState <|.. UnlockedState
  DoorState <|.. ProppedState
  DoorState <|.. UnlockedShortlyState
  Door -->"1" DoorState : «state»

  class DoorTimer <<Observable>> {
    - timer : java.util.Timer
    +{static}getInstance() : DoorTimer
  }

  class DirectoryDoors <<repository>> {
    - allDoors : ArrayList<Door>
    - timer : DoorTimer
    {static} + makeDoors()
    {static} + getDoorById(id:String) : Door
    {static} + getAllDoors() : ArrayList<Door>
    {static} + getTimer() : DoorTimer
  }

  DirectoryDoors --> "*" Door

  abstract class Area {
    +{abstract} getDoorsGivingAccess() : ArrayList<Door>
    +{abstract}getId() : String
  }

  class Space {
    - id : String
    - doors : ArrayList<Door>
    + Space(parent:Partition, id:String, doors:Door[])
    + getDoorsGivingAccess() : ArrayList<Door>
    + getId() : String
  }

  class Partition {
    - id : String
    - spaces : ArrayList<Area>
    + Partition(parent:Partition, id:String, spaces:Area[])
    + addSpace(area:Area)
    + getDoorsGivingAccess() : ArrayList<Door>
    + getId() : String
  }

  Area <|.. Space
  Area <|.. Partition
  Partition *--> "*" Area
  Space --> "*" Door : «gives access»


  class DirectoryAreas <<repository>> {
    - allAreas : ArrayList<Area>
    {static} + makeAreas()
    {static} + findAreaById(areaId:String) : Area
  }

  DirectoryAreas --> "*" Area

  class User {
    - name : String
    - credential : String
    - userGroup : UserGroup
    + setUserGroup(group:UserGroup)
    + isAuthorizedDateTime(now:LocalDateTime) : boolean
    + canDoAction(action:String) : boolean
    + getCredential() : String
    + getName() : String
    + getUserGroup() : UserGroup
  }

  class UserGroup {
    - name : String
    - users : List<User>
    - allowedActions : List<String>
    - startDate : LocalDateTime
    - endDate   : LocalDateTime
    - allowedDays : List<DayOfWeek>
    - startTime : LocalTime
    - endTime   : LocalTime
    + addUser(user:User)
    + isActionAllowed(action:String) : boolean
    + isAuthorizedDateTime(now:LocalDateTime) : boolean
    + getName() : String
  }

  class DirectoryUsers <<repository>> {
    - users : ArrayList<User>
    - userGroups : ArrayList<UserGroup>
    {static} + makeUsers()
    {static} + findUserByCredential(credential:String) : User
  }

  UserGroup --> "*" User
  User --> "1" UserGroup : belongs to
  DirectoryUsers --> "*" User
  class WebServer {
    + WebServer()
    + handleReader(...)
    + handleArea(...)
    + handleRefresh()
  }
}

package "baseNoStates.requests" {

  interface Request {
  + {abstract} answerToJson() : JSONObject
  + {abstract} process()
  + {abstract} toString() : String
  }

  class RequestRefresh implements Request {
  - jsonDoors : JSONObject[]
  + answerToJson() : JSONObject
  + process()
  + toString() : String
  }

  class RequestReader implements Request {
  - credential : String
  - action : String
  - now : LocalDateTime
  - doorId : String
  - userName : String
  - authorized : boolean
  - reasons : String[]
  - doorStateName : String
  + answerToJson() : JSONObject
  + process()
  - authorize(user : User, door : Door)
  + toString() : String
  + setDoorStateName(name : String)
  + getAction() : String
  + isAuthorized() : boolean
  }

  class RequestArea implements Request {
  - credential : String
  - action : String
  - now : LocalDateTime
  - areaId : String
  - requestsReader : RequestReader[]
  + answerToJson() : JSONObject
  + process()
  + getAction() : String
  }

}

package java.util{
abstract class Observable
interface Observer
}

UnlockedShortlyState..>java.util.Observer
DoorTimer..>java.util.Observable

@enduml
